# lab-4-daryanor5

./: CMakeLists.txt
include/: file_handle.hpp  resource_error.hpp  resource_manager.hpp
src/resource_core/: CMakeLists.txt  file_handle.cpp  resource_error.cpp  resource_manager.cpp
tests/: tests.cpp
